[build-system]
requires = [ "setuptools>=77.0.3", "setuptools-scm>=8.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "Thorlabs-UPSeries"
version = "1.1"
authors = [
  { name="Davis V. Garrad", email="dvlast@uwaterloo.ca" },
]
description = "See Readme"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyserial",
    "pyvisa",
    "pyvisa-py"
]
license = "GPL-3.0-only"
license-files = ["COPYING"]

[project.urls]
Homepage = "https://github.com/Davis-Garrad/Thorlabs-UPSeries"
Issues = "https://github.com/Davis-Garrad/Thorlabs-UPSeries/issues"
